# bull-doctor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  build-all.bat  build.rs  icon_render.rs
.github/workflows/: build-macos-dmg.yml  release.yml
crates/headroom-core/: Cargo.toml
crates/headroom-proxy/: Cargo.toml
crates/headroom-proxy/src/: lib.rs
crates/headroom-proxy/src/compression/: mod.rs
docs/: USER_MANUAL.md  local-dev.md
installer/: BullDoctor.iss  USAGE-zh-CN.txt
installer/macos/: Info.plist
scripts/: build-all.bat  build-installer.bat  build-macos-release.sh  build-release.ps1  build-zip.bat  release-windows.ps1  release.bat
src/: actions.rs  cli.rs  commands.rs  compress.rs  env_sync.rs  main.rs  paths.rs  platform.rs  tool_configs.rs  tray.rs
src/claude/: ccd_binary.rs  desktop_gateway.rs  mod.rs
src/config/: mod.rs
src/logs/: page.html  window.rs
src/provider/: chat_reasoning.rs  mod.rs  models.rs  presets.rs
src/proxy/: anthropic_to_chat.rs  chat_to_anthropic.rs  logged_stream.rs  message_repair.rs  mod.rs  reasoning_options.rs  sse.rs  upstream_retry.rs
src/request_log/: db.rs  mod.rs
src/settings/: api.rs  mod.rs  page.html  window.rs
src/skills/: mod.rs
src/stats/: api.rs  page.html
