[workspace]
members = [".", "crates/headroom-core", "crates/headroom-proxy"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision", "raw_value"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.7"
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
aws-sigv4 = { version = "1", default-features = false, features = ["sign-http", "http1"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-credential-types = { version = "1", default-features = false }
aws-smithy-runtime-api = { version = "1", default-features = false, features = ["client"] }
gcp_auth = "0.12"

[package]
name = "bull-doctor"
version = "0.3.0"
edition = "2021"
description = "Bull Doctor — 多模型代理 & 上下文压缩，让 Claude Code / Desktop / Hermes / OpenClaw 一键切换国产大模型"
license = "MIT"

[[bin]]
name = "bull-doctor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["json"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
futures-util = "0.3"
headroom-proxy = { path = "crates/headroom-proxy" }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
png = "0.17"

[target.'cfg(windows)'.build-dependencies]
ico = "0.3"
winres = "0.1"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21"
tao = { version = "0.34", default-features = false, features = ["rwh_06"] }
wry = "0.49"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
opt-level = "z"
